--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" href="https://media.istockphoto.com/id/1005384502/vector/human-brain-icon-vector.jpg?s=612x612&w=0&k=20&c=iDiuZfC9HgPWSj-YM0HxaCSTgg3wg0fBDcpQj3qrShs=" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="referrer" content="default">
     <title>Memory: собери все пары!</title>
